--- a/html/index.html
+++ b/html/index.html
@@ -19,7 +19,7 @@
 </div>
 
 <div id="signupDiv">
-	<span id="inner-title">Sign up</span>
+	<span id="inner-title">Sign up today!</span>
 	<input type="text" id="signupName" placeholder="Username" /><br />
 	<input type="password" id="signupPassword" placeholder="Password"/><br />
 	<button type="button" id="signupButton" class="buttons" onclick="doSignup();"> Continue </button>
