--- a/html/index.html
+++ b/html/index.html
@@ -14,7 +14,7 @@
 	<span id="inner-title">Log in</span>
 	<input type="text" id="loginName" placeholder="Username" /><br />
 	<input type="password" id="loginPassword" placeholder="Password"/><br />
-	<button type="button" id="loginButton" class="buttons" onclick="doLogin();"> Continue </button>
+	<button type="button" id="loginButton" class="buttons" onclick="doLogin()"> Continue </button>
 	<span id="loginResult"></span>
 </div>
 
@@ -22,7 +22,7 @@
 	<span id="inner-title">Sign up</span>
 	<input type="text" id="signupName" placeholder="Username" /><br />
 	<input type="password" id="signupPassword" placeholder="Password"/><br />
-	<button type="button" id="signupButton" class="buttons" onclick="doSignup();"> Continue </button>
+	<button type="button" id="signupButton" class="buttons" onclick="doSignup()"> Continue </button>
 	<span id="signupResult"></span>
 </div>
 
