--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<title>ContactConnect22</title>
 	<script type="text/javascript" src="js/md5.js"></script>
 	<script type="text/javascript" src="js/code.js"></script>
-    <link href="var/www/css/styles.css" rel="stylesheet">	
+    <link href="css/styles.css" rel="stylesheet">	
     <link href="https://fonts.googleapis.com/css?family=Audiowide" rel="stylesheet">
 </head>
 <body>
@@ -14,7 +14,7 @@
 	<span id="inner-title">Log in</span>
 	<input type="text" id="loginName" placeholder="Username" /><br />
 	<input type="password" id="loginPassword" placeholder="Password"/><br />
-	<button type="button" id="loginButton" class="buttons" onclick="doLogin()"> Continue </button>
+	<button type="button" id="loginButton" class="buttons" onclick="doLogin()"> GO! </button>
 	<span id="loginResult"></span>
 </div>
 
@@ -22,7 +22,7 @@
 	<span id="inner-title">Sign up</span>
 	<input type="text" id="signupName" placeholder="Username" /><br />
 	<input type="password" id="signupPassword" placeholder="Password"/><br />
-	<button type="button" id="signupButton" class="buttons" onclick="doSignup()"> Continue </button>
+	<button type="button" id="signupButton" class="buttons" onclick="doSignup()"> Start Now </button>
 	<span id="signupResult"></span>
 </div>
 
